--- a/order/templates/order/base.html
+++ b/order/templates/order/base.html
@@ -1,17 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title> WTSI &middot; DNA Order Application &middot; Home </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		
 		<!-- Bootstrap -->
-		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" />
-		<link rel="stylesheet" media="screen" href="css/bootstrap.min.css" />
+		<link href="../../static/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+		<style type="text/css">
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+		</style>
+		
+		<link href="../../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
-		{% block extrahead %}{% endblock %}
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    	<!--[if lt IE 9]>
+      		<script src="../../static/bootstrap/js/html5shiv/dist/html5shiv.js"></script>
+    	<![endif]-->
 	</head>
+	
 	<body>
-		<h1> Hello Conan OBrien! </h1>
-		<div id="pageContainer">
-			{% block content %}
-			{% endblock %}
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					
+					
+					<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					
+					</a>
+					
+					<!-- keep the brand outside if want to be shown -->
+					<a class="brand" href="#">DNA Order Application</a>
+					
+					<!-- Everything you want hidden at 940px or less, place within here -->
+					<div class="nav-collapse collapse">
+						<ul class="nav pull-left">
+							<li class="active"><a href="index">Home</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+							<li><a href="project-list">Project List</a></li>
+							
+						</ul>
+						<ul class="nav pull-right">
+							<li class="dropdown">
+
+								<a href="#user-profile" class="dropdown-toggle" data-toggle="dropdown">
+									<i class="icon-user icon-white"></i> Profile 
+									<b class="caret"></b>
+								</a>
+								<ul class="dropdown-menu">
+									<li><a href="#edit-profile"><i class="icon-pencil"></i> Edit</a></li>
+									<li><a href="#logout"><i class="icon-off"></i> Log out</a></li>
+								</ul>
+							</li>
+						</ul>
+						<form class="navbar-form pull-right">
+							<input class="span2" type="text" placeholder="Email">
+							<input class="span2" type="password" placeholder="Password">
+							<button type="submit" class="btn">Sign in</button>
+							<a href="sign-up" class="btn">Sign up</a>
+						</form>
+					</div>
+					
+				</div>
+			</div>
 		</div>
+		
+		<div class="container">
+		
+			<!-- Main hero unit for a primary marketing message or call to action -->
+			<div class="hero-unit">
+				<h1> Need to order some DNA? </h1>
+				<p>  The DNA Order Application aims to improve the interface for ordering DNA 
+				sequences from our collaborators. 
+				</p>
+			</div>
+			
+			<footer>
+				<p>&copy; Wellcome Trust Sanger Institute 2013, HGI Team</p>
+			</footer>
+		</div>
+		
+		
+	
+		<!-- Le javascript 
+		============================================================= -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<!-- local version of jquery -->
+		<script src="../../static/bootstrap/js/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script src="../../static/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
