--- a/DNAOrderApp/order/templates/order/welcome-collaborator.html
+++ b/DNAOrderApp/order/templates/order/welcome-collaborator.html
@@ -43,24 +43,18 @@ Supplier: Sanger Centre <br />
 		<h4> Choose a Style you would use to work in: </h4>
 		<table>
 			<tr>
-				<td> <img src="../../../media/arrows/Slide1.jpg"> </td>
-				<td> <img src="../../../media/arrows/Slide2.jpg"> </td>
-				<td> <img src="../../../media/arrows/Slide3.jpg"> </td>
+				<td> <img src="../../../media/arrows/Slide1.jpg" alt="all arrows pointing to the right"> </td>
+				<td> <img src="../../../media/arrows/Slide2.jpg" alt="all arrows pointing down"> </td>
+				<td> <img src="../../../media/arrows/Slide3.jpg" alt="arrow goes from left to right then for next row, right to left."> </td>
 			</tr>
 			<tr>
-				<td> <img src="../../../media/arrows/Slide4.jpg"> </td>
-				<td> <img src="../../../media/arrows/Slide5.jpg"> </td>
-				<td> <img src="../../../media/arrows/Slide6.jpg"> </td>
+				<td> <img src="../../../media/arrows/Slide4.jpg" alt="arrow goes from right to left then for next row, left to right."> </td>
+				<td> <img src="../../../media/arrows/Slide5.jpg" alt="all arrows pointing up."> </td>
+				<td> <img src="../../../media/arrows/Slide6.jpg" alt="all arrows pointing left."> </td>
 			</tr>
 		</table>
 
-		<a href="#manual" class="btn btn-primary pull-right"> Customize </a>
-		<br />
-		<br />
-
-		<!-- Customize ordering -->
-		<h4> Customize the order of the wells being filled </h4>
-		<div class="pagination-centered"><img src="../../../media/96plate.jpeg" /></div>
+		<a href="96plate.html" class="btn btn-primary pull-right"> Customize </a>
 		<br />
 		<br />
 
