Added a new menu item: sample submission; also adding appropriate hyperlinks to it

--- a/DNAOrderApp/order/templates/order/about.html
+++ b/DNAOrderApp/order/templates/order/about.html
@@ -9,6 +9,7 @@ About
 <li class="active"><a href="about">About</a></li>
 <li><a href="contact">Contact</a></li>
 <li><a href="project-list">Project List</a></li>
+<li><a href="sample-submission">Sample Submission</a></li>
 {% endblock active-navbar %}
 
 {% block content %}
