--- a/DNAOrderApp/order/templates/order/contact.html
+++ b/DNAOrderApp/order/templates/order/contact.html
@@ -1,5 +1,18 @@
 {% extends "base_template.html" %}
 
+{% block extrahead %}
+body{
+	background: url('../../../media/sanger.jpeg');
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	display: compact;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+}
+{% endblock extrahead %}
+
 {% block title %}
 Contact
 {% endblock title%}
