--- a/DNAOrderApp/order/templates/order/index.html
+++ b/DNAOrderApp/order/templates/order/index.html
@@ -3,6 +3,7 @@
 {% block extrahead %}
 body{
 	background: url('../../../media/sanger.jpeg');
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 	display: compact;
 	background-size: cover;
